--- a/test.html
+++ b/test.html
@@ -116,7 +116,7 @@
             <div style="background:#555; height:5px;"></div> <span class="badge bg-gray" style="align-self:center; margin-top:-1px;">TYPE 01. 흑백 실속형</span>
             
             <div class="img-placeholder">
-                <img src="128DN.jpg" alt="bizhub 128DN 사진">
+                <img src="128DN.png" alt="bizhub 128DN 사진">
             </div>
 
             <div class="card-body">
@@ -144,7 +144,7 @@
             <span class="badge bg-blue" style="align-self:center; margin-top:-1px;">TYPE 02. 컬러 입문형</span>
             
             <div class="img-placeholder">
-               <img src="325DNI.jpg" alt="bizhub 325DNI 사진">
+               <img src="325DNI.png" alt="bizhub 325DNI 사진">
             </div>
 
             <div class="card-body">
@@ -209,4 +209,5 @@
 </div>
 
 </body>
+
 </html>
